Prepare uart example

--- a/platformio.ini
+++ b/platformio.ini
@@ -20,21 +20,21 @@ include_dir = src
 
 [env]
 platform = atmelavr
-board = pro16MHzatmega328
+board = megaatmega2560
 ; board = megaatmega2560, pro16MHzatmega328
 
 src_filter =
     +<avrtos/>
 
 build_flags = 
-    -Wl,-T./avrtos-avr5.xn
-    ; -Wl,-T./avrtos-avr6.xn
+    ; -Wl,-T./avrtos-avr5.xn
+    -Wl,-T./avrtos-avr6.xn
 
 ; /dev/ttyACM0
-upload_port = /dev/ttyACM0
+upload_port = COM5
 
 ; /dev/ttyACM0
-monitor_port = /dev/ttyACM0
+monitor_port = COM5
 monitor_speed = 500000
 
 #_____________________________________________________________________________#
@@ -814,3 +814,20 @@ debug_load_mode = manual
 monitor_port = socket://localhost:5678
 debug_extra_cmds =
     tbreak main
+
+#_____________________________________________________________________________#
+
+[env:Uart]
+src_filter =
+    ${env.src_filter}
+    +<examples/uart/>
+
+build_flags = 
+    ${env.build_flags}
+    -DCONFIG_THREAD_EXPLICIT_MAIN_STACK=1
+    -DCONFIG_THREAD_MAIN_STACK_SIZE=0x100
+    ; -DCONFIG_THREAD_CANARIES=1
+    -DCONFIG_KERNEL_DEBUG=0
+    -DCONFIG_KERNEL_SCHEDULER_DEBUG=0
+    -DCONFIG_KERNEL_ASSERT=1
+    -DCONFIG_STDIO_PRINTF_TO_USART=0
