--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -2,8 +2,9 @@
     // See http://go.microsoft.com/fwlink/?LinkId=827846
     // for the documentation about the extensions.json format
     "recommendations": [
-        "platformio.platformio-ide"
-    ],
+	"platformio.platformio-ide",
+	"rockcat.avr-support"
+],
     "unwantedRecommendations": [
         "ms-vscode.cpptools-extension-pack",
 	"actboy168.tasks"
