First implementation of async UART drivers

--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -2,11 +2,10 @@
     // See http://go.microsoft.com/fwlink/?LinkId=827846
     // for the documentation about the extensions.json format
     "recommendations": [
-	"platformio.platformio-ide",
-	"rockcat.avr-support"
-],
+        "platformio.platformio-ide",
+        "rockcat.avr-support"
+    ],
     "unwantedRecommendations": [
-        "ms-vscode.cpptools-extension-pack",
-	"actboy168.tasks"
+        "ms-vscode.cpptools-extension-pack"
     ]
 }
