--- a/platformio.ini
+++ b/platformio.ini
@@ -826,8 +826,10 @@ build_flags =
     ${env.build_flags}
     -DCONFIG_THREAD_EXPLICIT_MAIN_STACK=1
     -DCONFIG_THREAD_MAIN_STACK_SIZE=0x100
-    ; -DCONFIG_THREAD_CANARIES=1
+    -DCONFIG_THREAD_CANARIES=1
     -DCONFIG_KERNEL_DEBUG=0
     -DCONFIG_KERNEL_SCHEDULER_DEBUG=0
     -DCONFIG_KERNEL_ASSERT=1
     -DCONFIG_STDIO_PRINTF_TO_USART=0
+    -DCONFIG_KERNEL_THREAD_IDLE_ADD_STACK=50
+    -DCONFIG_DRIVERS_UART_ASYNC=1
