--- a/platformio.ini
+++ b/platformio.ini
@@ -833,3 +833,5 @@ build_flags =
     -DCONFIG_STDIO_PRINTF_TO_USART=0
     -DCONFIG_KERNEL_THREAD_IDLE_ADD_STACK=50
     -DCONFIG_DRIVERS_UART_ASYNC=1
+    -DCONFIG_SYSTEM_WORKQUEUE_ENABLE=1
+    -DCONFIG_SYSTEM_WORKQUEUE_STACK_SIZE=0x200
