Fix platformio.ini configuration

--- a/platformio.ini
+++ b/platformio.ini
@@ -817,10 +817,10 @@ debug_extra_cmds =
 
 #_____________________________________________________________________________#
 
-[env:Uart]
+[env:DriversUsartAsync]
 src_filter =
     ${env.src_filter}
-    +<examples/uart/>
+    +<examples/drv-usart-async/>
 
 build_flags = 
     ${env.build_flags}
