--- a/platformio.ini
+++ b/platformio.ini
@@ -850,7 +850,7 @@ build_flags =
     -DCONFIG_THREAD_CANARIES=1
     -DCONFIG_KERNEL_DEBUG=0
     -DCONFIG_KERNEL_SCHEDULER_DEBUG=0
-    -DCONFIG_KERNEL_ASSERT=1
+;     -DCONFIG_KERNEL_ASSERT=1
     -DCONFIG_STDIO_PRINTF_TO_USART=0
     -DCONFIG_KERNEL_THREAD_IDLE_ADD_STACK=50
     -DCONFIG_DRIVERS_UART_ASYNC=1
