--- a/platformio.ini
+++ b/platformio.ini
@@ -23,6 +23,9 @@ platform = atmelavr
 board = megaatmega2560
 ; board = megaatmega2560, pro16MHzatmega328
 
+; Build options debug/release
+; build_type = debug
+
 src_filter =
     +<avrtos/>
 
