Timers drivers draft
- Add example to demonstrate timers drivers
- Minor usart drivers changes

--- a/platformio.ini
+++ b/platformio.ini
@@ -34,10 +34,10 @@ build_flags =
     -Wl,-T./avrtos-avr6.xn
 
 ; /dev/ttyACM0
-upload_port = COM11
+upload_port = COM9
 
 ; /dev/ttyACM0
-monitor_port = COM11
+monitor_port = COM9
 monitor_speed = 500000
 
 #_____________________________________________________________________________#
@@ -277,26 +277,7 @@ src_filter =
 
 build_flags = 
     ${env.build_flags}
-    -DCONFIG_KERNEL_SYSLOCK_HW_TIMER=1
-    -DCONFIG_KERNEL_TIME_SLICE=250000
-    -DCONFIG_KERNEL_UPTIME=0
-    -DCONFIG_KERNEL_DEBUG=1
-    
-    -DCONFIG_KERNEL_SCHEDULER_DEBUG=0
-    
-#_____________________________________________________________________________#
-
-[env:Sysclock-ATmega2560]
-board = megaatmega2560
-
-src_filter =
-    +<avrtos/>
-    +<examples/sysclock/>
-
-build_flags = 
-    -Wl,-T./avrtos-avr6.xn
-
-    -DCONFIG_KERNEL_SYSLOCK_HW_TIMER=1
+    -DCONFIG_KERNEL_SYSLOCK_HW_TIMER=0
     -DCONFIG_KERNEL_TIME_SLICE=250000
     -DCONFIG_KERNEL_UPTIME=0
     -DCONFIG_KERNEL_DEBUG=1
@@ -859,3 +840,15 @@ build_flags =
     -DCONFIG_DRIVERS_UART_ASYNC=1
     -DCONFIG_SYSTEM_WORKQUEUE_ENABLE=1
     -DCONFIG_SYSTEM_WORKQUEUE_STACK_SIZE=0x200
+
+#_____________________________________________________________________________#
+
+[env:DriversTimers]
+src_filter =
+    ${env.src_filter}
+    +<examples/drv-timers/>
+
+build_flags = 
+    ${env.build_flags}
+    -DCONFIG_KERNEL_SYSLOCK_HW_TIMER=0
+    -DCONFIG_KERNEL_UPTIME=0
