--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -19,6 +19,14 @@
 		},
 		{
 			"type": "shell",
+			"command": "~/qemu/build/avr-softmmu/qemu-system-avr -M mega2560 -bios .pio/build/Timer-qemu-ATmega2560/firmware.elf -s -S -nographic -serial tcp::5678,server=on,wait=off",
+			"problemMatcher": [
+				"$platformio"
+			],
+			"label": "QEMU WSL Ubuntu - Timer-qemu-ATmega2560"
+		},
+		{
+			"type": "shell",
 			"command": "wsl ~/qemu/build/avr-softmmu/qemu-system-avr -M uno -bios .pio/build/MutexMultithreadingDemo-qemu-ATmega328p/firmware.elf -s -S -nographic -serial tcp::5678,server=on,wait=off",
 			"problemMatcher": [
 				"$platformio"
