--- a/platformio.ini
+++ b/platformio.ini
@@ -34,11 +34,13 @@ build_flags =
     -Wl,-T./avrtos-avr6.xn
 
 ; /dev/ttyACM0
-upload_port = COM9
+upload_port = /dev/ttyACM0
 
 ; /dev/ttyACM0
-monitor_port = COM9
+monitor_port = /dev/ttyACM0
 monitor_speed = 500000
+
+build_type = debug
 
 #_____________________________________________________________________________#
 
@@ -463,6 +465,34 @@ build_flags =
     -DCONFIG_KERNEL_TIME_SLICE_US=10000
     -DCONFIG_KERNEL_TIMERS=1
     -DCONFIG_SYSTEM_WORKQUEUE_ENABLE=1
+    -DCONFIG_MAIN_STARTUP_INTERRUPT_POLICY=1
+    -DCONFIG_KERNEL_THREAD_IDLE_ADD_STACK=0x60
+
+[env:Timer-qemu-ATmega2560]
+src_filter =
+    ${env.src_filter}
+    +<examples/timers/>
+
+build_flags = 
+    ${env.build_flags}
+    -DCONFIG_KERNEL_ASSERT=1
+    -DCONFIG_THREAD_STACK_SENTINEL=1
+    -DCONFIG_THREAD_CANARIES=1
+    -DCONFIG_KERNEL_SYSLOCK_HW_TIMER=1
+    -DCONFIG_KERNEL_TIME_SLICE_US=10000
+    -DCONFIG_KERNEL_TIMERS=1
+    -DCONFIG_SYSTEM_WORKQUEUE_ENABLE=1
+    -DCONFIG_MAIN_STARTUP_INTERRUPT_POLICY=1
+    -DCONFIG_KERNEL_THREAD_IDLE_ADD_STACK=0x60
+    -D__QEMU__=1
+
+build_type = debug
+debug_tool = custom
+debug_port = :1234
+debug_load_mode = manual
+monitor_port = socket://localhost:5678
+debug_extra_cmds =
+    tbreak main
 
 #_____________________________________________________________________________#
 
@@ -527,6 +557,7 @@ build_flags =
     -DCONFIG_KERNEL_DEBUG=0
     -DCONFIG_KERNEL_SCHEDULER_DEBUG=0
     -DCONFIG_KERNEL_ASSERT=1
+    -DCONFIG_KERNEL_THREAD_IDLE_ADD_STACK=0x60
 
 #_____________________________________________________________________________#
 
@@ -634,8 +665,7 @@ build_flags =
     -DCONFIG_KERNEL_ASSERT=0
     -DCONFIG_KERNEL_DEBUG=0
     -DCONFIG_KERNEL_THREAD_IDLE=0
-    -DCONFIG_THREAD_EXPLICIT_MAIN_STACK=1
-    -DCONFIG_THREAD_MAIN_STACK_SIZE=0x20
+    -DCONFIG_THREAD_EXPLICIT_MAIN_STACK=0
     -DCONFIG_STDIO_PRINTF_TO_USART=-1
     -DCONFIG_KERNEL_UPTIME=1
 
@@ -650,7 +680,7 @@ build_flags =
     ${env.build_flags}
     -DCONFIG_KERNEL_THREAD_IDLE=0
     -DCONFIG_THREAD_EXPLICIT_MAIN_STACK=1
-    -DCONFIG_THREAD_MAIN_STACK_SIZE=0x50
+    -DCONFIG_THREAD_MAIN_STACK_SIZE=0x80
     -DCONFIG_STDIO_PRINTF_TO_USART=0
     -DCONFIG_KERNEL_TIMERS=0
     -DCONFIG_KERNEL_UPTIME=1
@@ -813,7 +843,7 @@ build_flags =
     -DCONFIG_KERNEL_ASSERT=1
     -DCONFIG_STDIO_PRINTF_TO_USART=0
     -DCONFIG_KERNEL_THREAD_IDLE_ADD_STACK=50
-    -DCONFIG_DRIVERS_UART_ASYNC=1
+    -DCONFIG_DRIVERS_USART1_ASYNC=1
     -DCONFIG_SYSTEM_WORKQUEUE_ENABLE=1
     -DCONFIG_SYSTEM_WORKQUEUE_STACK_SIZE=0x200
 
@@ -834,9 +864,9 @@ build_flags =
 ;     -DCONFIG_KERNEL_ASSERT=1
     -DCONFIG_STDIO_PRINTF_TO_USART=0
     -DCONFIG_KERNEL_THREAD_IDLE_ADD_STACK=50
-    -DCONFIG_DRIVERS_UART_ASYNC=1
     -DCONFIG_SYSTEM_WORKQUEUE_ENABLE=1
     -DCONFIG_SYSTEM_WORKQUEUE_STACK_SIZE=0x200
+    -DCONFIG_DRIVERS_USART1_ASYNC=1
 
 #_____________________________________________________________________________#
 
@@ -857,3 +887,5 @@ build_flags =
     -DCONFIG_KERNEL_TIME_SLICE_US=4000
     -DCONFIG_KERNEL_SYSCLOCK_PERIOD_US=1000
     -DCONFIG_KERNEL_DELAY_OBJECT_U32=1
+    -DCONFIG_KERNEL_SCHEDULER_DEBUG=0
+    -DCONFIG_KERNEL_DEBUG=0
