Add support for normal mode timers
- Rename src_filter to build_src_filter (to anticipate depreciated src_filter)
- Update readme.md

--- a/platformio.ini
+++ b/platformio.ini
@@ -26,7 +26,7 @@ board = megaatmega2560
 ; Build options debug/release
 ; build_type = debug
 
-src_filter =
+build_src_filter =
     +<avrtos/>
 
 build_flags = 
@@ -34,10 +34,10 @@ build_flags =
     -Wl,-T./avrtos-avr6.xn
 
 ; /dev/ttyACM0
-upload_port = /dev/ttyACM0
+upload_port = COM10
 
 ; /dev/ttyACM0
-monitor_port = /dev/ttyACM0
+monitor_port = COM10
 monitor_speed = 500000
 
 build_type = debug
@@ -45,8 +45,8 @@ build_type = debug
 #_____________________________________________________________________________#
 
 [env:CoopMultithreadingDemo]
-src_filter =
-    ${env.src_filter}
+build_src_filter =
+    ${env.build_src_filter}
     +<examples/coop-multithreading-demo/>
 
 build_flags = 
@@ -59,8 +59,8 @@ build_flags =
 
 [env:QEMU-CoopMultithreadingDemo]
 
-src_filter =
-    ${env:CoopMultithreadingDemo.src_filter}
+build_src_filter =
+    ${env:CoopMultithreadingDemo.build_src_filter}
 
 build_flags = 
     ${env:CoopMultithreadingDemo.build_flags}
@@ -77,8 +77,8 @@ debug_extra_cmds =
 #_____________________________________________________________________________#
 
 [env:MultithreadingSwitchingFrequencyDemo]
-src_filter =
-    ${env.src_filter}
+build_src_filter =
+    ${env.build_src_filter}
     +<examples/multithreading-switching-frequency/>
 
 build_flags = 
@@ -88,8 +88,8 @@ build_flags =
 #_____________________________________________________________________________#
 
 [env:PremptMultithreadingDemo]
-src_filter =
-    ${env.src_filter}
+build_src_filter =
+    ${env.build_src_filter}
     +<examples/prempt-multithreading-demo/>
 
 build_flags = 
@@ -108,8 +108,8 @@ monitor_filters = direct  #, log2file
 #_____________________________________________________________________________#
 
 [env:DataStructures]
-src_filter =
-    ${env.src_filter}
+build_src_filter =
+    ${env.build_src_filter}
     +<examples/data-structures/>
 
 build_flags = 
@@ -119,8 +119,8 @@ build_flags =
 #_____________________________________________________________________________#
 
 [env:MutexMultithreadingDemo]
-src_filter =
-    ${env.src_filter}
+build_src_filter =
+    ${env.build_src_filter}
     +<examples/mutex-multithreading-demo/>
 
 build_flags = 
@@ -136,8 +136,8 @@ build_flags =
 [env:MutexMultithreadingDemo-qemu-ATmega328p]
 build_type = debug
 
-src_filter =
-    ${env.src_filter}
+build_src_filter =
+    ${env.build_src_filter}
     +<examples/mutex-multithreading-demo/>
 
 build_flags = 
@@ -159,8 +159,8 @@ debug_extra_cmds =
 #_____________________________________________________________________________#
 
 [env:MutexMultithreadingDemoAssert]
-src_filter =
-    ${env.src_filter}
+build_src_filter =
+    ${env.build_src_filter}
     +<examples/mutex-multithreading-demo/>
 
 build_flags = 
@@ -175,8 +175,8 @@ build_flags =
 #_____________________________________________________________________________#
 
 [env:MutexMultithreadingTest]
-src_filter =
-    ${env.src_filter}
+build_src_filter =
+    ${env.build_src_filter}
     +<examples/mutex-multithreading-test/>
 
 build_flags = 
@@ -189,8 +189,8 @@ build_flags =
 #_____________________________________________________________________________#
 
 [env:SemaphoreMultithreadingDemo]
-src_filter =
-    ${env.src_filter}
+build_src_filter =
+    ${env.build_src_filter}
     +<examples/semaphore-multithreading-demo/>
 
 build_flags = 
@@ -203,8 +203,8 @@ build_flags =
 #_____________________________________________________________________________#
 
 [env:Canaries]
-src_filter =
-    ${env.src_filter}
+build_src_filter =
+    ${env.build_src_filter}
     +<examples/canaries/>
 
 build_flags = 
@@ -214,8 +214,8 @@ build_flags =
 #_____________________________________________________________________________#
 
 [env:InterruptYield]
-src_filter =
-    ${env.src_filter}
+build_src_filter =
+    ${env.build_src_filter}
     +<examples/interrupt-yield/>
 
 build_flags = 
@@ -230,8 +230,8 @@ build_flags =
 #_____________________________________________________________________________#
 
 [env:SchedLock]
-src_filter =
-    ${env.src_filter}
+build_src_filter =
+    ${env.build_src_filter}
     +<examples/sched-lock/>
 
 build_flags = 
@@ -245,8 +245,8 @@ build_flags =
 #_____________________________________________________________________________#
 
 [env:WorkQueue]
-src_filter =
-    ${env.src_filter}
+build_src_filter =
+    ${env.build_src_filter}
     +<examples/workqueue/>
 
 build_flags = 
@@ -258,8 +258,8 @@ build_flags =
 #_____________________________________________________________________________#
 
 [env:SystemWorkQueue]
-src_filter =
-    ${env.src_filter}
+build_src_filter =
+    ${env.build_src_filter}
     +<examples/system-workqueue/>
 
 build_flags = 
@@ -273,8 +273,8 @@ build_flags =
 #_____________________________________________________________________________#
 
 [env:Sysclock]
-src_filter =
-    ${env.src_filter}
+build_src_filter =
+    ${env.build_src_filter}
     +<examples/sysclock/>
 
 build_flags = 
@@ -291,8 +291,8 @@ build_flags =
 [env:Sysclock-qemu-ATmega2560]
 board = megaatmega2560
 
-src_filter =
-    ${env.src_filter}
+build_src_filter =
+    ${env.build_src_filter}
     +<examples/sysclock/>
 
 build_flags = 
@@ -318,8 +318,8 @@ debug_extra_cmds =
 [env:Sysclock-qemu-ATmega328p]
 board = pro16MHzatmega328
 
-src_filter =
-    ${env.src_filter}
+build_src_filter =
+    ${env.build_src_filter}
     +<examples/sysclock/>
 
 build_flags = 
@@ -343,8 +343,8 @@ debug_extra_cmds =
 #_____________________________________________________________________________#
 
 [env:MinimalExample]
-src_filter =
-    ${env.src_filter}
+build_src_filter =
+    ${env.build_src_filter}
     +<examples/minimal-example/>
 
 build_flags = 
@@ -357,8 +357,8 @@ build_flags =
 #_____________________________________________________________________________#
 
 [env:Fifo]
-src_filter =
-    ${env.src_filter}
+build_src_filter =
+    ${env.build_src_filter}
     +<examples/fifo/>
 
 #_____________________________________________________________________________#
@@ -366,8 +366,8 @@ src_filter =
 [env:FifoQemuMega328p]
 board = pro16MHzatmega328
 
-src_filter =
-    ${env:Fifo.src_filter}
+build_src_filter =
+    ${env:Fifo.build_src_filter}
     
 build_flags = 
     -Wl,-T./avrtos-avr5.xn
@@ -383,8 +383,8 @@ debug_extra_cmds =
 #_____________________________________________________________________________#
 
 [env:FifoSlab]
-src_filter =
-    ${env.src_filter}
+build_src_filter =
+    ${env.build_src_filter}
     +<examples/fifo-slab/>
 
 build_flags = 
@@ -398,8 +398,8 @@ build_flags =
 #_____________________________________________________________________________#
 
 [env:ObjectReservation]
-src_filter =
-    ${env.src_filter}
+build_src_filter =
+    ${env.build_src_filter}
     +<examples/object-reservation/>
 
 build_flags = 
@@ -415,8 +415,8 @@ build_flags =
 #_____________________________________________________________________________#
 
 [env:ThreadTermination]
-src_filter =
-    ${env.src_filter}
+build_src_filter =
+    ${env.build_src_filter}
     +<examples/thread-termination/>
 
 build_flags = 
@@ -430,8 +430,8 @@ build_flags =
 [env:ThreadTermination-qemu-ATmega2560]
 board = megaatmega2560
 
-src_filter =
-    ${env.src_filter}
+build_src_filter =
+    ${env.build_src_filter}
     +<examples/thread-termination/>
 
 build_flags = 
@@ -453,8 +453,8 @@ debug_extra_cmds =
 #_____________________________________________________________________________#
 
 [env:Timer]
-src_filter =
-    ${env.src_filter}
+build_src_filter =
+    ${env.build_src_filter}
     +<examples/timers/>
 
 build_flags = 
@@ -469,8 +469,8 @@ build_flags =
     -DCONFIG_KERNEL_THREAD_IDLE_ADD_STACK=0x60
 
 [env:Timer-qemu-ATmega2560]
-src_filter =
-    ${env.src_filter}
+build_src_filter =
+    ${env.build_src_filter}
     +<examples/timers/>
 
 build_flags = 
@@ -497,8 +497,8 @@ debug_extra_cmds =
 #_____________________________________________________________________________#
 
 [env:CPP]
-src_filter =
-    ${env.src_filter}
+build_src_filter =
+    ${env.build_src_filter}
     +<examples/cpp/>
 
 build_flags = 
@@ -513,8 +513,8 @@ build_flags =
 #_____________________________________________________________________________#
 
 [env:Signal]
-src_filter =
-    ${env.src_filter}
+build_src_filter =
+    ${env.build_src_filter}
     +<examples/signal/>
 
 build_flags = 
@@ -526,8 +526,8 @@ build_flags =
 #_____________________________________________________________________________#
 
 [env:MemSlab]
-src_filter =
-    ${env.src_filter}
+build_src_filter =
+    ${env.build_src_filter}
     +<examples/mem_slab/>
 
 build_flags = 
@@ -545,8 +545,8 @@ build_flags =
 #_____________________________________________________________________________#
 
 [env:POC-Shell]
-src_filter =
-    ${env.src_filter}
+build_src_filter =
+    ${env.build_src_filter}
     +<examples/poc-shell/>
 
 build_flags = 
@@ -562,15 +562,15 @@ build_flags =
 #_____________________________________________________________________________#
 
 [env:PRNG]
-src_filter =
-    ${env.src_filter}
+build_src_filter =
+    ${env.build_src_filter}
     +<examples/prng/>
 
 #_____________________________________________________________________________#
 
 [env:MsgQ]
-src_filter =
-    ${env.src_filter}
+build_src_filter =
+    ${env.build_src_filter}
     +<examples/msgq/>
 
 build_flags = 
@@ -585,8 +585,8 @@ build_flags =
 #_____________________________________________________________________________#
 
 [env:Atomic]
-src_filter =
-    ${env.src_filter}
+build_src_filter =
+    ${env.build_src_filter}
     +<examples/atomic/>
 
 build_flags = 
@@ -597,8 +597,8 @@ build_flags =
 #_____________________________________________________________________________#
 
 [env:IDLE]
-src_filter =
-    ${env.src_filter}
+build_src_filter =
+    ${env.build_src_filter}
     +<examples/idle/>
 
 build_flags = 
@@ -610,8 +610,8 @@ build_flags =
 #_____________________________________________________________________________#
 
 [env:Uptime]
-src_filter =
-    ${env.src_filter}
+build_src_filter =
+    ${env.build_src_filter}
     +<examples/uptime/>
 
 build_flags = 
@@ -630,8 +630,8 @@ build_flags =
 [env:Uptime-qemu-ATmega2560]
 board = megaatmega2560
 
-src_filter =
-    ${env.src_filter}
+build_src_filter =
+    ${env.build_src_filter}
     +<examples/uptime/>
 
 build_flags = 
@@ -656,8 +656,8 @@ debug_extra_cmds =
 #_____________________________________________________________________________#
 
 [env:Footprint]
-src_filter =
-    ${env.src_filter}
+build_src_filter =
+    ${env.build_src_filter}
     +<examples/footprint/>
 
 build_flags = 
@@ -672,8 +672,8 @@ build_flags =
 #_____________________________________________________________________________#
 
 [env:Events]
-src_filter =
-    ${env.src_filter}
+build_src_filter =
+    ${env.build_src_filter}
     +<examples/events/>
 
 build_flags = 
@@ -696,8 +696,8 @@ build_flags =
 #_____________________________________________________________________________#
 
 [env:StackSentinel]
-src_filter =
-    ${env.src_filter}
+build_src_filter =
+    ${env.build_src_filter}
     +<examples/stack-sentinel/>
 
 build_flags = 
@@ -728,8 +728,8 @@ build_flags =
 #_____________________________________________________________________________#
 
 [env:QEMU-StackSentinel]
-src_filter =
-	${env:StackSentinel.src_filter}
+build_src_filter =
+	${env:StackSentinel.build_src_filter}
 
 build_flags = 
 	${env:StackSentinel.build_flags}
@@ -746,8 +746,8 @@ debug_extra_cmds =
 #_____________________________________________________________________________#
 
 [env:Time]
-src_filter =
-    ${env.src_filter}
+build_src_filter =
+    ${env.build_src_filter}
     +<examples/time/>
 
 build_flags = 
@@ -765,8 +765,8 @@ build_flags =
 #_____________________________________________________________________________#
 
 [env:V2]
-src_filter =
-    ${env.src_filter}
+build_src_filter =
+    ${env.build_src_filter}
     +<examples/v2/>
 
 build_flags = 
@@ -791,16 +791,16 @@ build_flags =
     -DCONFIG_KERNEL_DEBUG_PREEMPT_UART=0
 
 [env:V2-01]
-src_filter =
-	${env:V2.src_filter}
+build_src_filter =
+	${env:V2.build_src_filter}
 
 build_flags = 
 	${env:V2.build_flags}
 	-O1
 
 [env:V2-02]
-src_filter =
-	${env:V2.src_filter}
+build_src_filter =
+	${env:V2.build_src_filter}
 
 build_flags = 
 	${env:V2.build_flags}
@@ -809,8 +809,8 @@ build_flags =
 #_____________________________________________________________________________#
 
 [env:QEMU-V2]
-src_filter =
-	${env:V2.src_filter}
+build_src_filter =
+	${env:V2.build_src_filter}
 
 build_flags = 
 	${env:V2.build_flags}
@@ -829,8 +829,8 @@ debug_extra_cmds =
 #_____________________________________________________________________________#
 
 [env:DriversUsartAsync]
-src_filter =
-    ${env.src_filter}
+build_src_filter =
+    ${env.build_src_filter}
     +<examples/drv-usart-async/>
 
 build_flags = 
@@ -850,8 +850,8 @@ build_flags =
 #_____________________________________________________________________________#
 
 [env:ZephyrDevUsartTool]
-src_filter =
-    ${env.src_filter}
+build_src_filter =
+    ${env.build_src_filter}
     +<examples/zephyr-dev-usart-tool/>
 
 build_flags = 
@@ -871,8 +871,8 @@ build_flags =
 #_____________________________________________________________________________#
 
 [env:DriversTimers]
-src_filter =
-    ${env.src_filter}
+build_src_filter =
+    ${env.build_src_filter}
     +<examples/drv-timers/>
 
 build_flags = 
