Simplify sample showing minimal footprint
- Add function to deinit timer

--- a/platformio.ini
+++ b/platformio.ini
@@ -668,7 +668,8 @@ build_flags =
     -DCONFIG_THREAD_EXPLICIT_MAIN_STACK=0
     -DCONFIG_STDIO_PRINTF_TO_USART=-1
     -DCONFIG_KERNEL_UPTIME=1
-
+    -DCONFIG_MAIN_STARTUP_INTERRUPT_POLICY=1
+    
 #_____________________________________________________________________________#
 
 [env:Events]
