Refactor timer ll drivers, add timer high level API
- Add example for this new timer API

--- a/platformio.ini
+++ b/platformio.ini
@@ -890,3 +890,20 @@ build_flags =
     -DCONFIG_KERNEL_DELAY_OBJECT_U32=1
     -DCONFIG_KERNEL_SCHEDULER_DEBUG=0
     -DCONFIG_KERNEL_DEBUG=0
+
+#_____________________________________________________________________________#
+
+[env:DriversTimersAPI]
+build_src_filter =
+    ${env.build_src_filter}
+    +<examples/drv-api-timers/>
+
+build_flags = 
+    ${env.build_flags}
+    -DCONFIG_MAIN_STARTUP_INTERRUPT_POLICY=1
+    -DCONFIG_STDIO_PRINTF_TO_USART=0
+    -DCONFIG_KERNEL_UPTIME=1
+    -DCONFIG_KERNEL_SYSLOCK_HW_TIMER=0
+    -DCONFIG_DRIVERS_TIMER2_API=1
+    -DCONFIG_DRIVERS_TIMER4_API=1
+    -DCONFIG_DRIVERS_TIMER5_API=1
