--- a/.vscode/launch.template.json
+++ b/.vscode/launch.template.json
@@ -1,6 +1,20 @@
 {
     "version": "0.2.0",
     "configurations": [
+	{
+		"name": "(gdb) QEMU",
+		"type": "cppdbg",
+		"request": "launch",
+		"miDebuggerServerAddress": "127.0.0.1:1234",
+		"program": "${workspaceFolder}/.pio/build/Sysclock-qemu-ATmega2560/firmware.elf",
+		"args": [],
+		"stopAtEntry": true,
+		"cwd": "${workspaceFolder}",
+		"environment": [],
+		"externalConsole": false,
+		"miDebuggerPath": "avr-gdb",
+		"MIMode": "gdb"
+	},
         {
             "name": "(gdb) remote QEMU WSL",
             "type": "cppdbg",
@@ -75,7 +89,7 @@
 		"environment": [],
 		"externalConsole": true,
 		"MIMode": "gdb",
-		"miDebuggerPath": "/usr/bin/avr-gdb",
+		"miDebuggerPath": "/usr/bin/gdb",
 		"miDebuggerServerAddress": "localhost:1234",
 		"setupCommands": [
 		    {
