Add blinking LED demo

--- a/platformio.ini
+++ b/platformio.ini
@@ -9,7 +9,7 @@
 ; https://docs.platformio.org/page/projectconf.html
 
 [platformio]
-default_envs = MinimalExample
+default_envs = BlinkingLED
 
 src_dir = src
 include_dir = src
@@ -31,16 +31,35 @@ build_src_filter =
 
 build_flags = 
     ; -Wl,-T./avrtos-avr5.xn
-    -Wl,-T./avrtos-avr6.xn
+    -Wl,-T./avrtos-avr6.xn   
 
 ; /dev/ttyACM0
-upload_port = COM10
+upload_port = /dev/ttyACM0
 
 ; /dev/ttyACM0
-monitor_port = COM10
+monitor_port = /dev/ttyACM0
 monitor_speed = 500000
 
 build_type = debug
+
+#_____________________________________________________________________________#
+
+[env:BlinkingLED]
+build_src_filter =
+    ${env.build_src_filter}
+    +<examples/blinking-led/>
+
+build_flags = 
+    ${env.build_flags}
+    -DCONFIG_THREAD_EXPLICIT_MAIN_STACK=0
+    -DCONFIG_KERNEL_PREEMPTIVE_THREADS=1
+    -DCONFIG_KERNEL_SYSLOCK_HW_TIMER=0
+    -DCONFIG_KERNEL_TIME_SLICE_US=1000
+    -DCONFIG_KERNEL_TIME_SLICE_US=1000
+    -DCONFIG_KERNEL_DEBUG=0
+    -DCONFIG_KERNEL_SCHEDULER_DEBUG=0
+    -DCONFIG_KERNEL_THREAD_IDLE=1
+    -DCONFIG_KERNEL_THREAD_IDLE_ADD_STACK=0
 
 #_____________________________________________________________________________#
 
