(WIP) Allow to build the project with cmake for ATmega2560
- Enhance k_block()
- Fix warnings

--- a/platformio.ini
+++ b/platformio.ini
@@ -30,8 +30,8 @@ build_src_filter =
     +<avrtos/>
 
 build_flags = 
-    ; -Wl,-T./avrtos-avr5.xn
-    -Wl,-T./avrtos-avr6.xn   
+    ; -Wl,-T./arch/avr/avrtos-avr5.xn
+    -Wl,-T./arch/avr/avrtos-avr6.xn   
 
 ; /dev/ttyACM0
 upload_port = /dev/ttyACM0
@@ -53,7 +53,7 @@ build_flags =
     ${env.build_flags}
     -DCONFIG_THREAD_EXPLICIT_MAIN_STACK=0
     -DCONFIG_KERNEL_PREEMPTIVE_THREADS=1
-    -DCONFIG_KERNEL_SYSLOCK_HW_TIMER=0
+    -DCONFIG_KERNEL_SYSLOCK_HW_TIMER=1
     -DCONFIG_KERNEL_TIME_SLICE_US=1000
     -DCONFIG_KERNEL_TIME_SLICE_US=1000
     -DCONFIG_KERNEL_DEBUG=0
