--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,45 +1,51 @@
 {
-    "files.associations": {
-        "*.asm": "avr",
-        "multithreading_debug.h": "c",
-        "uart.h": "c",
-        "multithreading.h": "c",
-        "multithreading_defines.h": "c",
-        "schedules_items.h": "c",
-        "xqueue.h": "c",
-        "mutex.h": "c",
-        "pgmspace.h": "c",
-        "io.h": "c",
-        "interrupt.h": "c",
-        "kernel.h": "c",
-        "defines.h": "c",
-        "common.h": "c",
-        "debug.h": "c",
-        "fifo.h": "c",
-        "assert.h": "c",
-        "idle.h": "c",
-        "canaries.h": "c",
-        "queue.h": "c",
-        "workqueue.h": "c",
-        "dlist.h": "c",
-        "stddef.h": "c",
-        "mem_slab.h": "c",
-        "avrtos.h": "c",
-        "tqueue.h": "c",
-        "oqueue.h": "c",
-        "led.h": "c",
-        "delay.h": "c",
-        "cpufunc.h": "c",
-        "stdint.h": "c",
-        "default_config.h": "c",
-        "time.h": "c",
-        "event.h": "c",
-        "atomic.h": "c",
-        "timer.h": "c",
-        "stack_sentinel.h": "c",
-        "fault.h": "c",
-        "iom328p.h": "c",
-        "stdbool.h": "c",
-        "usart.h": "c"
-    },
+	"cmake.configureSettings": {
+		"CMAKE_BUILD_TYPE": "Debug",
+		"CMAKE_EXPORT_COMPILE_COMMANDS": "ON",
+		"CMAKE_GENERATOR": "Unix Makefiles",
+/* proc] Executing command: /usr/bin/cmake --no-warn-unused-cli -DCMAKE_BUILD_TYPE:STRING=Debug -DCMAKE_EXPORT_COMPILE_COMMANDS:BOOL=TRUE "-DCMAKE_GENERATOR:STRING=Unix Makefiles" -DCMAKE_C_COMPILER:FILEPATH=/usr/lib64/ccache/avr-gcc -DCMAKE_CXX_COMPILER:FILEPATH=/usr/lib64/ccache/avr-g++ -S/home/lucas/AVRTOS -B/home/lucas/AVRTOS/build */
+	},
+	"files.associations": {
+		"*.asm": "avr",
+		"multithreading_debug.h": "c",
+		"uart.h": "c",
+		"multithreading.h": "c",
+		"multithreading_defines.h": "c",
+		"schedules_items.h": "c",
+		"xqueue.h": "c",
+		"mutex.h": "c",
+		"pgmspace.h": "c",
+		"io.h": "c",
+		"interrupt.h": "c",
+		"kernel.h": "c",
+		"defines.h": "c",
+		"common.h": "c",
+		"debug.h": "c",
+		"fifo.h": "c",
+		"assert.h": "c",
+		"idle.h": "c",
+		"canaries.h": "c",
+		"queue.h": "c",
+		"workqueue.h": "c",
+		"dlist.h": "c",
+		"stddef.h": "c",
+		"mem_slab.h": "c",
+		"avrtos.h": "c",
+		"tqueue.h": "c",
+		"oqueue.h": "c",
+		"led.h": "c",
+		"delay.h": "c",
+		"cpufunc.h": "c",
+		"stdint.h": "c",
+		"default_config.h": "c",
+		"time.h": "c",
+		"event.h": "c",
+		"atomic.h": "c",
+		"timer.h": "c",
+		"stack_sentinel.h": "c",
+		"fault.h": "c",
+		"iom328p.h": "c",
+		"stdbool.h": "c",
+		"usart.h": "c"
+	},
 }
