--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,10 +2,10 @@ cmake_minimum_required(VERSION 3.20)
 
 project(avrtos-project)
 
+enable_language(C CXX ASM)
+
 # include("${CMAKE_CURRENT_SOURCE_DIR}/cmake/avr6-atmega2560.cmake")
-
 # set(CMAKE_TOOLCHAIN_FILE ${CMAKE_CURRENT_SOURCE_DIR}/cmake/avr6-atmega2560.cmake)
-
 # include(${CMAKE_CURRENT_SOURCE_DIR}/cmake/avr6-atmega2560.cmake)
 
 if (NOT CMAKE_BUILD_TYPE)
@@ -14,14 +14,8 @@ endif()
 
 add_definitions(
     -DF_CPU=${F_CPU}
-    -D__QEMU__
 )
 
-set(EXAMPLE "workqueue")
-
-
-if (EXAMPLE STREQUAL "blinking-led")
-	add_subdirectory(src/examples/blinking-led)
-elseif(EXAMPLE STREQUAL "workqueue")
-	add_subdirectory(src/examples/workqueue)
-endif()
+add_subdirectory(src/examples/workqueue)
+add_subdirectory(src/examples/blinking-led)
+add_subdirectory(src/examples/uptime)
