--- a/platformio.ini
+++ b/platformio.ini
@@ -643,6 +643,7 @@ build_flags =
     -DCONFIG_KERNEL_UPTIME=1
     -DCONFIG_KERNEL_API_NOINLINE=1
     -DCONFIG_THREAD_CANARIES=1
+    -DCONFIG_KERNEL_TIME=1
 
 #_____________________________________________________________________________#
 
