--- a/src/examples/uptime/CMakeLists.txt
+++ b/src/examples/uptime/CMakeLists.txt
@@ -1,5 +1,5 @@
 
-project(blinking-led)
+project(uptime)
 
 set(EXE ${PROJECT_NAME})
 
@@ -10,15 +10,15 @@ set_target_properties(${EXE} PROPERTIES OUTPUT_NAME ${EXE}.elf)
 
 # AVRTOS Configuration
 target_compile_definitions(${EXE} PUBLIC
-	"CONFIG_THREAD_EXPLICIT_MAIN_STACK=0"
-	"CONFIG_KERNEL_PREEMPTIVE_THREADS=1"
-	"CONFIG_KERNEL_SYSLOCK_HW_TIMER=1"
-	"CONFIG_KERNEL_TIME_SLICE_US=1000"
-	"CONFIG_KERNEL_TIME_SLICE_US=1000"
+	"CONFIG_KERNEL_ASSERT=0"
+	"CONFIG_STDIO_PRINTF_TO_USART=0"
 	"CONFIG_KERNEL_DEBUG=0"
-	"CONFIG_KERNEL_SCHEDULER_DEBUG=0"
-	"CONFIG_KERNEL_THREAD_IDLE=1"
-	"CONFIG_KERNEL_THREAD_IDLE_ADD_STACK=50"
+	"CONFIG_KERNEL_SYSLOCK_HW_TIMER=1"
+	"CONFIG_KERNEL_TIME_SLICE_US=4000"
+	"CONFIG_KERNEL_UPTIME=1"
+	"CONFIG_KERNEL_API_NOINLINE=1"
+	"CONFIG_THREAD_CANARIES=1"
+	"CONFIG_KERNEL_TIME=1"
 )
 
 target_include_directories(${EXE} PUBLIC
