Build all examples using cmake

--- a/platformio.ini
+++ b/platformio.ini
@@ -443,6 +443,7 @@ build_flags =
     -DCONFIG_KERNEL_ASSERT=1
     -DCONFIG_THREAD_CANARIES=1
     -DCONFIG_KERNEL_UPTIME=0
+    -DCONFIG_KERNEL_SYSCLOCK_PERIOD_US=100000
 
 #_____________________________________________________________________________#
 
