--- a/src/examples/prng/CMakeLists.txt
+++ b/src/examples/prng/CMakeLists.txt
@@ -1,11 +1,8 @@
-project(sample_workqueue)
+project(sample_prng)
 add_executable(${PROJECT_NAME} main.c)
 
 # AVRTOS Configuration
 target_compile_definitions(${PROJECT_NAME} PUBLIC
-	CONFIG_KERNEL_TIME_SLICE_US=1000
-	CONFIG_KERNEL_DEBUG=0
-	CONFIG_KERNEL_SCHEDULER_DEBUG=0
 
 )
 
