--- a/src/examples/sysclock/CMakeLists.txt
+++ b/src/examples/sysclock/CMakeLists.txt
@@ -1,10 +1,12 @@
-project(sample_workqueue)
+project(sample_sysclock)
 add_executable(${PROJECT_NAME} main.c)
 
 # AVRTOS Configuration
 target_compile_definitions(${PROJECT_NAME} PUBLIC
-	CONFIG_KERNEL_TIME_SLICE_US=1000
-	CONFIG_KERNEL_DEBUG=0
+	CONFIG_KERNEL_SYSLOCK_HW_TIMER=1
+	CONFIG_KERNEL_TIME_SLICE_US=250000
+	CONFIG_KERNEL_UPTIME=0
+	CONFIG_KERNEL_DEBUG=1
 	CONFIG_KERNEL_SCHEDULER_DEBUG=0
 
 )
