--- a/src/examples/coop-multithreading-demo/CMakeLists.txt
+++ b/src/examples/coop-multithreading-demo/CMakeLists.txt
@@ -1,12 +1,11 @@
-project(sample_workqueue)
+project(sample_coop_multithreading_demo)
 add_executable(${PROJECT_NAME} main.c)
 
 # AVRTOS Configuration
 target_compile_definitions(${PROJECT_NAME} PUBLIC
-	CONFIG_KERNEL_TIME_SLICE_US=1000
-	CONFIG_KERNEL_DEBUG=0
-	CONFIG_KERNEL_SCHEDULER_DEBUG=0
-
+	CONFIG_THREAD_MAIN_STACK_SIZE=0x100
+	CONFIG_KERNEL_PREEMPTIVE_THREADS=0
+	CONFIG_THREAD_IDLE_COOPERATIVE=1
 )
 
 target_link_avrtos(${PROJECT_NAME})
