--- a/src/examples/drv-api-timers/CMakeLists.txt
+++ b/src/examples/drv-api-timers/CMakeLists.txt
@@ -1,17 +1,16 @@
-project(sample_uptime)
+project(sample_drv_api_timers)
 add_executable(${PROJECT_NAME} main.c)
 
 # AVRTOS Configuration
 target_compile_definitions(${PROJECT_NAME} PUBLIC
-	CONFIG_KERNEL_ASSERT=1
+	CONFIG_MAIN_STARTUP_INTERRUPT_POLICY=1
 	CONFIG_STDIO_PRINTF_TO_USART=0
-	CONFIG_KERNEL_DEBUG=0
-	CONFIG_KERNEL_SYSLOCK_HW_TIMER=1
-	CONFIG_KERNEL_TIME_SLICE_US=1000
 	CONFIG_KERNEL_UPTIME=1
-	CONFIG_KERNEL_API_NOINLINE=1
-	CONFIG_THREAD_CANARIES=1
-	CONFIG_KERNEL_TIME=1
+	CONFIG_KERNEL_SYSLOCK_HW_TIMER=0
+	CONFIG_DRIVERS_TIMER2_API=1
+	CONFIG_DRIVERS_TIMER4_API=1
+	CONFIG_DRIVERS_TIMER5_API=1
+
 )
 
 target_link_avrtos(${PROJECT_NAME})
