--- a/src/examples/fifo/CMakeLists.txt
+++ b/src/examples/fifo/CMakeLists.txt
@@ -1,12 +1,9 @@
-project(sample_workqueue)
+project(sample_fifo)
 add_executable(${PROJECT_NAME} main.c)
 
 # AVRTOS Configuration
 target_compile_definitions(${PROJECT_NAME} PUBLIC
-	CONFIG_KERNEL_TIME_SLICE_US=1000
-	CONFIG_KERNEL_DEBUG=0
-	CONFIG_KERNEL_SCHEDULER_DEBUG=0
-
+	CONFIG_KERNEL_SYSLOCK_HW_TIMER=1
 )
 
 target_link_avrtos(${PROJECT_NAME})
