--- a/src/examples/mem_slab/CMakeLists.txt
+++ b/src/examples/mem_slab/CMakeLists.txt
@@ -1,16 +1,17 @@
-project(sample_uptime)
+project(sample_mem_slab)
 add_executable(${PROJECT_NAME} main.c)
 
 # AVRTOS Configuration
 target_compile_definitions(${PROJECT_NAME} PUBLIC
-	CONFIG_KERNEL_ASSERT=1
-	CONFIG_STDIO_PRINTF_TO_USART=0
+	CONFIG_THREAD_EXPLICIT_MAIN_STACK=1
 	CONFIG_KERNEL_DEBUG=0
-	CONFIG_KERNEL_SYSLOCK_HW_TIMER=1
-	CONFIG_KERNEL_TIME_SLICE_US=1000
-	CONFIG_KERNEL_UPTIME=1
-	CONFIG_KERNEL_API_NOINLINE=1
+	CONFIG_KERNEL_SCHEDULER_DEBUG=0
+	CONFIG_KERNEL_ASSERT=1
+	CONFIG_THREAD_MAIN_STACK_SIZE=0x80
+	CONFIG_THREAD_STACK_SENTINEL=1
 	CONFIG_THREAD_CANARIES=1
+	CONFIG_STDIO_PRINTF_TO_USART=0
+	CONFIG_KERNEL_UPTIME=1
 	CONFIG_KERNEL_TIME=1
 )
 
