--- a/src/examples/multithreading-switching-frequency/CMakeLists.txt
+++ b/src/examples/multithreading-switching-frequency/CMakeLists.txt
@@ -1,11 +1,9 @@
-project(sample_workqueue)
+project(sample_multithreading_switching_frequency)
 add_executable(${PROJECT_NAME} main.c)
 
 # AVRTOS Configuration
 target_compile_definitions(${PROJECT_NAME} PUBLIC
-	CONFIG_KERNEL_TIME_SLICE_US=1000
-	CONFIG_KERNEL_DEBUG=0
-	CONFIG_KERNEL_SCHEDULER_DEBUG=0
+	CONFIG_KERNEL_PREEMPTIVE_THREADS=0
 
 )
 
