--- a/src/examples/sched-lock/CMakeLists.txt
+++ b/src/examples/sched-lock/CMakeLists.txt
@@ -1,17 +1,13 @@
-project(sample_blinking-led)
+project(sample_sched_lock)
 add_executable(${PROJECT_NAME} main.c)
 
 # AVRTOS Configuration
 target_compile_definitions(${PROJECT_NAME} PUBLIC
-	CONFIG_THREAD_EXPLICIT_MAIN_STACK=0
 	CONFIG_KERNEL_PREEMPTIVE_THREADS=1
-	CONFIG_KERNEL_SYSLOCK_HW_TIMER=1
-	CONFIG_KERNEL_TIME_SLICE_US=1000
-	CONFIG_KERNEL_TIME_SLICE_US=1000
+	CONFIG_KERNEL_TIME_SLICE_US=5000
 	CONFIG_KERNEL_DEBUG=0
 	CONFIG_KERNEL_SCHEDULER_DEBUG=0
-	CONFIG_KERNEL_THREAD_IDLE=1
-	CONFIG_KERNEL_THREAD_IDLE_ADD_STACK=0
+	CONFIG_KERNEL_API_NOINLINE=1
 
 )
 
