--- a/src/examples/semaphore-multithreading-demo/CMakeLists.txt
+++ b/src/examples/semaphore-multithreading-demo/CMakeLists.txt
@@ -1,17 +1,12 @@
-project(sample_blinking-led)
+project(sample_semaphore_multithreading_demo)
 add_executable(${PROJECT_NAME} main.c)
 
 # AVRTOS Configuration
 target_compile_definitions(${PROJECT_NAME} PUBLIC
-	CONFIG_THREAD_EXPLICIT_MAIN_STACK=0
 	CONFIG_KERNEL_PREEMPTIVE_THREADS=1
-	CONFIG_KERNEL_SYSLOCK_HW_TIMER=1
-	CONFIG_KERNEL_TIME_SLICE_US=1000
-	CONFIG_KERNEL_TIME_SLICE_US=1000
+	CONFIG_KERNEL_TIME_SLICE_US=16000
 	CONFIG_KERNEL_DEBUG=0
 	CONFIG_KERNEL_SCHEDULER_DEBUG=0
-	CONFIG_KERNEL_THREAD_IDLE=1
-	CONFIG_KERNEL_THREAD_IDLE_ADD_STACK=0
 
 )
 
