--- a/src/examples/stack-sentinel/CMakeLists.txt
+++ b/src/examples/stack-sentinel/CMakeLists.txt
@@ -1,12 +1,10 @@
-project(sample_workqueue)
+project(sample_sentinel)
 add_executable(${PROJECT_NAME} main.c)
 
 # AVRTOS Configuration
 target_compile_definitions(${PROJECT_NAME} PUBLIC
-	CONFIG_KERNEL_TIME_SLICE_US=1000
-	CONFIG_KERNEL_DEBUG=0
-	CONFIG_KERNEL_SCHEDULER_DEBUG=0
-
+	CONFIG_KERNEL_TIME=1
+	CONFIG_KERNEL_UPTIME=1
 )
 
 target_link_avrtos(${PROJECT_NAME})
