--- a/src/examples/thread-termination/CMakeLists.txt
+++ b/src/examples/thread-termination/CMakeLists.txt
@@ -1,17 +1,14 @@
-project(sample_uptime)
+project(sample_thread_termination)
 add_executable(${PROJECT_NAME} main.c)
 
 # AVRTOS Configuration
 target_compile_definitions(${PROJECT_NAME} PUBLIC
-	CONFIG_KERNEL_ASSERT=1
-	CONFIG_STDIO_PRINTF_TO_USART=0
-	CONFIG_KERNEL_DEBUG=0
 	CONFIG_KERNEL_SYSLOCK_HW_TIMER=1
-	CONFIG_KERNEL_TIME_SLICE_US=1000
-	CONFIG_KERNEL_UPTIME=1
-	CONFIG_KERNEL_API_NOINLINE=1
+	CONFIG_KERNEL_TIME_SLICE_US=1000000
+	CONFIG_KERNEL_SYSCLOCK_PERIOD_US=100000
+	CONFIG_KERNEL_ASSERT=1
 	CONFIG_THREAD_CANARIES=1
-	CONFIG_KERNEL_TIME=1
+	CONFIG_KERNEL_UPTIME=0
 )
 
 target_link_avrtos(${PROJECT_NAME})
