--- a/src/examples/time/CMakeLists.txt
+++ b/src/examples/time/CMakeLists.txt
@@ -1,16 +1,9 @@
-project(sample_uptime)
+project(sample_time)
 add_executable(${PROJECT_NAME} main.c)
 
 # AVRTOS Configuration
 target_compile_definitions(${PROJECT_NAME} PUBLIC
-	CONFIG_KERNEL_ASSERT=1
-	CONFIG_STDIO_PRINTF_TO_USART=0
-	CONFIG_KERNEL_DEBUG=0
-	CONFIG_KERNEL_SYSLOCK_HW_TIMER=1
-	CONFIG_KERNEL_TIME_SLICE_US=1000
 	CONFIG_KERNEL_UPTIME=1
-	CONFIG_KERNEL_API_NOINLINE=1
-	CONFIG_THREAD_CANARIES=1
 	CONFIG_KERNEL_TIME=1
 )
 
