Add a command to run in QEMU (without debug)
- Reformat code
- Documentation

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,7 +9,7 @@ enable_language(C CXX ASM)
 # set(CMAKE_TOOLCHAIN_FILE ${CMAKE_CURRENT_SOURCE_DIR}/cmake/avr6-atmega2560.cmake)
 # include(${CMAKE_CURRENT_SOURCE_DIR}/cmake/avr6-atmega2560.cmake)
 
-set(QEMU OFF)
+set(QEMU ON)
 
 # set(F_CPU 16000000UL)
 # set(MCU atmega2560)
