Kernel refactoring (IDLE + internal functions)
- Properly handle internal functions
- Attempt to fix cooperative idle thread, not being properly removed from the runqueue when a ready thread has just been scheduled. (postponed)
- Set DEFAULT_KERNEL_SYSLOCK_HW_TIMER to timer 1 (for QEMU)

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -47,6 +47,7 @@
 		"iom328p.h": "c",
 		"stdbool.h": "c",
 		"usart.h": "c",
-		"semaphore.h": "c"
+		"semaphore.h": "c",
+		"kernel_internals.h": "c"
 	},
 }
