--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,14 +9,19 @@ enable_language(C CXX ASM)
 # set(CMAKE_TOOLCHAIN_FILE ${CMAKE_CURRENT_SOURCE_DIR}/cmake/avr6-atmega2560.cmake)
 # include(${CMAKE_CURRENT_SOURCE_DIR}/cmake/avr6-atmega2560.cmake)
 
-set(QEMU ON)
+# set(BOARD "atmega2560-qemu")
+# set(BOARD_NAME "atmega2560")
+# set(BOARD "atmega2560-qemu")
+# set(BOARD_NAME "atmega2560")
+
+set(QEMU OFF)
 
 # set(F_CPU 16000000UL)
 # set(MCU atmega2560)
 set(QEMU_MCU mega2560)
 
 set(BAUDRATE 500000)
-set(PROG_DEV "/dev/ttyACM0")
+set(PROG_DEV "/dev/ttyACM1")
 
 if (QEMU)
 	set(QEMU_FLAG "-D__QEMU__")
