--- a/src/examples/thread-termination/CMakeLists.txt
+++ b/src/examples/thread-termination/CMakeLists.txt
@@ -9,6 +9,7 @@ target_compile_definitions(${PROJECT_NAME} PUBLIC
 	CONFIG_KERNEL_ASSERT=1
 	CONFIG_THREAD_CANARIES=1
 	CONFIG_KERNEL_UPTIME=0
+	CONFIG_KERNEL_THREAD_TERMINATION_TYPE=1
 )
 
 target_link_avrtos(${PROJECT_NAME})
