--- a/src/examples/fifo/CMakeLists.txt
+++ b/src/examples/fifo/CMakeLists.txt
@@ -4,6 +4,12 @@ add_executable(${PROJECT_NAME} main.c)
 # AVRTOS Configuration
 target_compile_definitions(${PROJECT_NAME} PUBLIC
 	CONFIG_KERNEL_SYSLOCK_HW_TIMER=1
+
+	# CONFIG_KERNEL_SYSCLOCK_PERIOD_US=100000
+	# CONFIG_KERNEL_TIME_SLICE_US=100000
+
+	# CONFIG_KERNEL_DEBUG=1
+	# CONFIG_KERNEL_SCHEDULER_DEBUG=1
 )
 
 target_link_avrtos(${PROJECT_NAME})
