--- a/src/examples/footprint/CMakeLists.txt
+++ b/src/examples/footprint/CMakeLists.txt
@@ -10,7 +10,8 @@ target_compile_definitions(${PROJECT_NAME} PUBLIC
 	CONFIG_STDIO_PRINTF_TO_USART=-1
 	CONFIG_KERNEL_UPTIME=1
 	CONFIG_INTERRUPT_POLICY=1
-
+	CONFIG_KERNEL_SYSCLOCK_PERIOD_US=1000
+	CONFIG_KERNEL_TIME_SLICE_US=1000
 )
 
 target_link_avrtos(${PROJECT_NAME})
