--- a/src/examples/mutex-multithreading-demo/CMakeLists.txt
+++ b/src/examples/mutex-multithreading-demo/CMakeLists.txt
@@ -4,12 +4,12 @@ add_executable(${PROJECT_NAME} main.c)
 # AVRTOS Configuration
 target_compile_definitions(${PROJECT_NAME} PUBLIC
 	CONFIG_KERNEL_PREEMPTIVE_THREADS=1
+	CONFIG_THREAD_MAIN_COOPERATIVE=0
 	CONFIG_KERNEL_TIME_SLICE_US=16000
 	CONFIG_KERNEL_DEBUG=0
 	CONFIG_KERNEL_SCHEDULER_DEBUG=0
 	CONFIG_KERNEL_THREAD_IDLE=0
 	CONFIG_KERNEL_ASSERT=1
-
 )
 
 target_link_avrtos(${PROJECT_NAME})
