(AVR) Fix avr5 linker script for atmega328p in Cmake build system - Add many threads sample - Revert .xn to .ld renaming - Improve CMake files (handling of QEMU option and commands) - Rename k_start to k_thread_start - Improve _tqueue_schedule() performance by adding new item as close as possible from the begin of the list (when equality) - Dequeue several threads at a time from _k_events_queue in _k_system_shift() - Prepend to runqueue scheduled threads instead of appending them

--- a/platformio.ini
+++ b/platformio.ini
@@ -30,8 +30,8 @@ build_src_filter =
     +<avrtos/>
 
 build_flags = 
-    ; -Wl,-T./arch/avr/avrtos-avr5.ld
-    -Wl,-T./arch/avr/avrtos-avr6.ld   
+;     -Wl,-T./arch/avr/avrtos-avr5-atmega328p.xn
+    -Wl,-T./arch/avr/avrtos-avr6.xn   
 
 ; /dev/ttyACM0
 upload_port = /dev/ttyACM0
@@ -315,7 +315,7 @@ build_src_filter =
     +<examples/sysclock/>
 
 build_flags = 
-    -Wl,-T./avrtos-avr6.ld
+    -Wl,-T./avrtos-avr6.xn
 
     -DCONFIG_KERNEL_SYSLOCK_HW_TIMER=1
     -DCONFIG_KERNEL_TIME_SLICE_US=250000
@@ -342,7 +342,7 @@ build_src_filter =
     +<examples/sysclock/>
 
 build_flags = 
-    -Wl,-T./avrtos-avr5.ld
+    -Wl,-T./avrtos-avr5.xn
 
     -DCONFIG_KERNEL_SYSLOCK_HW_TIMER=1
     -DCONFIG_KERNEL_TIME_SLICE_US=250000
@@ -389,7 +389,7 @@ build_src_filter =
     ${env:Fifo.build_src_filter}
     
 build_flags = 
-    -Wl,-T./avrtos-avr5.ld
+    -Wl,-T./avrtos-avr5.xn
     -DCONFIG_KERNEL_SYSLOCK_HW_TIMER=1
 
 debug_tool = custom
@@ -455,7 +455,7 @@ build_src_filter =
     +<examples/thread-termination/>
 
 build_flags = 
-    -Wl,-T./avrtos-avr6.ld
+    -Wl,-T./avrtos-avr6.xn
     -DCONFIG_KERNEL_SYSLOCK_HW_TIMER=1
     -DCONFIG_KERNEL_TIME_SLICE_US=1000000
     -DCONFIG_KERNEL_ASSERT=1
@@ -656,7 +656,7 @@ build_src_filter =
     +<examples/uptime/>
 
 build_flags = 
-    -Wl,-T./avrtos-avr6.ld
+    -Wl,-T./avrtos-avr6.xn
     -DCONFIG_KERNEL_ASSERT=1
     -DCONFIG_STDIO_PRINTF_TO_USART=0
     -DCONFIG_KERNEL_DEBUG=0
