--- a/src/examples/rt/CMakeLists.txt
+++ b/src/examples/rt/CMakeLists.txt
@@ -3,7 +3,8 @@ add_executable(${PROJECT_NAME} main.c)
 
 # AVRTOS Configuration
 target_compile_definitions(${PROJECT_NAME} PUBLIC
-	
+	CONFIG_KERNEL_DEBUG=0
+	CONFIG_KERNEL_SCHEDULER_DEBUG=0
 )
 
 target_link_avrtos(${PROJECT_NAME})
