Add EXTI drivers and sample

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -49,7 +49,8 @@
 		"usart.h": "c",
 		"semaphore.h": "c",
 		"kernel_internals.h": "c",
-		"drivers.h": "c"
+		"drivers.h": "c",
+		"gpio.h": "c"
 	},
 	"editor.rulers": [80]
 }
