Add support for PCINT

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -14,9 +14,9 @@ enable_language(C CXX ASM)
 # set( CMAKE_VERBOSE_MAKEFILE on )
 
 set(CMAKE_BUILD_TYPE Debug)
-set(QEMU ON)
-set(PROG_DEV "/dev/ttyACM0")
-# SET(ENABLE_SINGLE_SAMPLE "drv-exti")
+set(QEMU OFF)
+set(PROG_DEV "/dev/ttyACM2")
+SET(ENABLE_SINGLE_SAMPLE "drv-exti")
 # SET(ENABLE_SINGLE_SAMPLE "drv-gpio")
 
 add_subdirectory(src/examples)
