--- a/src/examples/rt/CMakeLists.txt
+++ b/src/examples/rt/CMakeLists.txt
@@ -5,6 +5,9 @@ add_executable(${PROJECT_NAME} main.c)
 target_compile_definitions(${PROJECT_NAME} PUBLIC
 	CONFIG_KERNEL_DEBUG=0
 	CONFIG_KERNEL_SCHEDULER_DEBUG=0
+
+	CONFIG_INTERRUPT_POLICY=0
+	CONFIG_THREAD_DEFAULT_SREG=0
 )
 
 target_link_avrtos(${PROJECT_NAME})
