Minor changes in shell sample

--- a/platformio.ini
+++ b/platformio.ini
@@ -564,10 +564,10 @@ build_flags =
 
 #_____________________________________________________________________________#
 
-[env:POC-Shell]
+[env:Shell]
 build_src_filter =
     ${env.build_src_filter}
-    +<examples/poc-shell/>
+    +<examples/shell/>
 
 build_flags = 
     ${env.build_flags}
