Implement flags subscription/notification mecanism.
- Add sample "flags" which demonstrates how to this use this new flags feature.
- Use standard POSIX error codes

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -50,7 +50,8 @@
 		"semaphore.h": "c",
 		"kernel_internals.h": "c",
 		"drivers.h": "c",
-		"gpio.h": "c"
+		"gpio.h": "c",
+		"flags.h": "c"
 	},
 	"editor.rulers": [80]
 }
