Rename drivers functions name
- usart_ll_drv_* to ll_usart_*
- usart_ll_* to ll_usart_*
- usart_* to serial_*
- usart_drv_* to usart_*
- uart.c (serial.h) to serial.c (serial.h)

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -8,7 +8,7 @@
 	"files.associations": {
 		"*.asm": "avr",
 		"multithreading_debug.h": "c",
-		"uart.h": "c",
+		"serial.h": "c",
 		"multithreading.h": "c",
 		"multithreading_defines.h": "c",
 		"schedules_items.h": "c",
