Improve timer drivers
- Add support and samples for PWM
- Improve naming in drivers
- Improve build method with a Makefile
- Remove "3 exclamation point" demon issue

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -52,7 +52,9 @@
 		"drivers.h": "c",
 		"gpio.h": "c",
 		"flags.h": "c",
-		"logging.h": "c"
+		"logging.h": "c",
+		"iom2560.h": "c",
+		"iomxx0_1.h": "c"
 	},
 	"editor.rulers": [80]
 }
