--- a/src/examples/signal/CMakeLists.txt
+++ b/src/examples/signal/CMakeLists.txt
@@ -6,6 +6,9 @@ target_compile_definitions(${PROJECT_NAME} PUBLIC
 	CONFIG_KERNEL_SCHEDULER_DEBUG=0
 	CONFIG_KERNEL_DEBUG=0
 
+	CONFIG_KERNEL_SYSLOCK_HW_TIMER=1
+	CONFIG_KERNEL_SYSCLOCK_PERIOD_US=200000
+	CONFIG_KERNEL_TIME_SLICE_US=200000
 )
 
 target_link_avrtos(${PROJECT_NAME})
