--- a/src/examples/stack-sentinel/CMakeLists.txt
+++ b/src/examples/stack-sentinel/CMakeLists.txt
@@ -5,6 +5,11 @@ add_executable(${PROJECT_NAME} main.c)
 target_compile_definitions(${PROJECT_NAME} PUBLIC
 	CONFIG_KERNEL_TIME=1
 	CONFIG_KERNEL_UPTIME=1
+
+	CONFIG_STDIO_PRINTF_TO_USART=0
+	CONFIG_THREAD_STACK_SENTINEL=1
+	CONFIG_THREAD_STACK_CANARY=1
+	CONFIG_THREAD_CANARIES=1
 )
 
 target_link_avrtos(${PROJECT_NAME})
