--- a/src/examples/isr-unpend/CMakeLists.txt
+++ b/src/examples/isr-unpend/CMakeLists.txt
@@ -1,21 +1,25 @@
-project(sample_isr_unpend)
-add_executable(${PROJECT_NAME} main.c)
+if (NOT QEMU)
 
-# AVRTOS Configuration
-target_compile_definitions(${PROJECT_NAME} PUBLIC
-	CONFIG_KERNEL_DEBUG=0
-	CONFIG_KERNEL_SCHEDULER_DEBUG=0
+	project(sample_isr_unpend)
+	add_executable(${PROJECT_NAME} main.c)
 
-	CONFIG_INTERRUPT_POLICY=1
-	CONFIG_KERNEL_SYSCLOCK_PERIOD_US=400000
-	CONFIG_KERNEL_TIME_SLICE_US=400000
+	# AVRTOS Configuration
+	target_compile_definitions(${PROJECT_NAME} PUBLIC
+		CONFIG_KERNEL_DEBUG=0
+		CONFIG_KERNEL_SCHEDULER_DEBUG=0
 
-	CONFIG_THREAD_CANARIES=1
-	CONFIG_KERNEL_SYSTICK_GPIOB_DEBUG=0x40
+		CONFIG_INTERRUPT_POLICY=1
+		CONFIG_KERNEL_SYSCLOCK_PERIOD_US=400000
+		CONFIG_KERNEL_TIME_SLICE_US=400000
 
-	# CONFIG_THREAD_IDLE_COOPERATIVE=1
-)
+		CONFIG_THREAD_CANARIES=1
+		CONFIG_KERNEL_SYSTICK_GPIOB_DEBUG=0x40
 
-target_link_avrtos(${PROJECT_NAME})
+		# CONFIG_THREAD_IDLE_COOPERATIVE=1
+	)
 
-target_prepare_env(${PROJECT_NAME})
+	target_link_avrtos(${PROJECT_NAME})
+
+	target_prepare_env(${PROJECT_NAME})
+
+endif()
