--- a/src/examples/minimal-example/CMakeLists.txt
+++ b/src/examples/minimal-example/CMakeLists.txt
@@ -4,10 +4,19 @@ add_executable(${PROJECT_NAME} main.c)
 # AVRTOS Configuration
 target_compile_definitions(${PROJECT_NAME} PUBLIC
 	CONFIG_KERNEL_PREEMPTIVE_THREADS=1
-	CONFIG_KERNEL_TIME_SLICE_US=10000
+	CONFIG_KERNEL_TIME_SLICE_US=1000
+
+	CONFIG_INTERRUPT_POLICY=1
+	CONFIG_KERNEL_THREAD_TERMINATION_TYPE=-1
+
+	CONFIG_THREAD_MAIN_COOPERATIVE=1
+	
+	CONFIG_STDIO_PRINTF_TO_USART=0
+
+	CONFIG_KERNEL_UPTIME=1
+
 	CONFIG_KERNEL_DEBUG=0
 	CONFIG_KERNEL_SCHEDULER_DEBUG=0
-
 )
 
 target_link_avrtos(${PROJECT_NAME})
