Improve naming, formatting
- Merge oqueue with slist

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -32,7 +32,7 @@
 		"mem_slab.h": "c",
 		"avrtos.h": "c",
 		"tqueue.h": "c",
-		"oqueue.h": "c",
+		"slist.h": "c",
 		"led.h": "c",
 		"delay.h": "c",
 		"cpufunc.h": "c",
