--- a/platformio.ini
+++ b/platformio.ini
@@ -9,7 +9,7 @@
 ; https://docs.platformio.org/page/projectconf.html
 
 [platformio]
-default_envs = BlinkingLed
+default_envs = MinimalExample
 
 src_dir = src
 include_dir = src
