Introduce CONFIG_AVRTOS_LINKER_SCRIPT allowing to build without the AVRTOS linker script set
- Some clean in python scripts

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -54,7 +54,8 @@
 		"flags.h": "c",
 		"logging.h": "c",
 		"iom2560.h": "c",
-		"iomxx0_1.h": "c"
+		"iomxx0_1.h": "c",
+		"typeinfo": "c"
 	},
 	"editor.rulers": [80]
 }
