--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -2,13 +2,9 @@
     // See http://go.microsoft.com/fwlink/?LinkId=827846
     // for the documentation about the extensions.json format
     "recommendations": [
-        "ms-vscode.cmake-tools",
-        "platformio.platformio-ide",
-        "rockcat.avr-support",
-	"mitaki28.vscode-clang",
-	"ms-vscode.cpptools-extension-pack",
+        "platformio.platformio-ide"
     ],
     "unwantedRecommendations": [
-        
+        "ms-vscode.cpptools-extension-pack"
     ]
 }
