--- a/src/examples/arduino/CMakeLists.txt
+++ b/src/examples/arduino/CMakeLists.txt
@@ -1,16 +1,12 @@
-project(sample_signal)
+project(sample_arduino)
 add_executable(${PROJECT_NAME} main.c)
 
 # AVRTOS Configuration
 target_compile_definitions(${PROJECT_NAME} PUBLIC
-	CONFIG_KERNEL_SCHEDULER_DEBUG=0
-	CONFIG_KERNEL_DEBUG=0
-
+	CONFIG_AVRTOS_LINKER_SCRIPT=0
 	CONFIG_STDIO_PRINTF_TO_USART=0
-
-	CONFIG_KERNEL_SYSLOCK_HW_TIMER=1
-	CONFIG_KERNEL_SYSCLOCK_PERIOD_US=200000
-	CONFIG_KERNEL_TIME_SLICE_US=200000
+	CONFIG_KERNEL_AUTO_INIT=0
+	CONFIG_KERNEL_TIMERS=1
 )
 
 target_link_avrtos(${PROJECT_NAME})
