--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -2,9 +2,12 @@
     // See http://go.microsoft.com/fwlink/?LinkId=827846
     // for the documentation about the extensions.json format
     "recommendations": [
-        "platformio.platformio-ide"
+        "ms-vscode.cmake-tools",
+        "rockcat.avr-support",
+	    "mitaki28.vscode-clang",
+	    "ms-vscode.cpptools-extension-pack",
     ],
     "unwantedRecommendations": [
-        "ms-vscode.cpptools-extension-pack"
+        "platformio.platformio-ide",
     ]
 }
