--- a/src/examples/thread-ev-spawn/CMakeLists.txt
+++ b/src/examples/thread-ev-spawn/CMakeLists.txt
@@ -7,6 +7,8 @@ target_compile_definitions(${PROJECT_NAME} PUBLIC
     CONFIG_KERNEL_SYSCLOCK_PERIOD_US=1000u
     CONFIG_KERNEL_TIME_SLICE_US=1000u
     CONFIG_THREAD_CANARIES=1u
+
+    CONFIG_THREAD_MAIN_COOPERATIVE=1
 )
 
 target_link_avrtos(${PROJECT_NAME})
