- Add function k_show_ticks() - Enhance shell sample

--- a/src/examples/shell/CMakeLists.txt
+++ b/src/examples/shell/CMakeLists.txt
@@ -9,6 +9,9 @@ target_compile_definitions(${PROJECT_NAME} PUBLIC
 	CONFIG_KERNEL_SCHEDULER_DEBUG=0
 	CONFIG_KERNEL_ASSERT=1
 	CONFIG_KERNEL_THREAD_IDLE_ADD_STACK=0x60
+	CONFIG_KERNEL_UPTIME=1
+	CONFIG_STDIO_PRINTF_TO_USART=0
+	CONFIG_THREAD_CANARIES=1
 )
 
 target_link_avrtos(${PROJECT_NAME})
