--- a/platformio.ini
+++ b/platformio.ini
@@ -699,7 +699,9 @@ build_flags =
 	-DCONFIG_KERNEL_SCHEDULER_DEBUG=0
 	-DCONFIG_KERNEL_ASSERT=1
 	-DCONFIG_KERNEL_THREAD_IDLE_ADD_STACK=0x60
-
+	-DCONFIG_KERNEL_UPTIME=1
+	-DCONFIG_STDIO_PRINTF_TO_USART=0
+	-DCONFIG_THREAD_CANARIES=1
 
 [env:MainStack]
 build_src_filter =
